# pico-1808-capturadora

./: CMakeLists.txt  i2s_slave.pio  main.c  tusb_config.h  usb_descriptors.c
.github/workflows/: build.yml
